--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   shimmer:
   flutter_slidable: ^3.0.0
   phosphor_flutter:
+  timeago:
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
