--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth:
   firebase_core:
-  cloud_firestore: ^5.6.3
+  cloud_firestore: ^6.0.3
   flutter_bloc: ^9.1.1
   dartz:
   get_it:
@@ -47,6 +47,7 @@ dependencies:
   timeago:
   intl: ^0.19.0
   table_calendar: ^3.0.9
+  firebase_messaging: ^16.0.3
 
 dev_dependencies:
   flutter_test:
